Fix bug #67704 - CURLOPT_POSTFIELDS modify the type of param

the bugs is here: https://bugs.php.net/bug.php?id=67704
when the type of param is not string, we use a temp variable(current_tmp in the code)， then convert it to string, free the variable at last